add GCP/Azure KMS and finish some regulatory stuff